--- a/gui.ui
+++ b/gui.ui
@@ -48,7 +48,7 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_6">
         <item>
-         <widget class="QLabel" name="label_33">
+         <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Selected:</string>
           </property>
@@ -77,90 +77,46 @@
      </layout>
     </item> 
     <item row="3" column="0">
-     <widget class="QLabel" name="warnings">
+     <widget class="QLabel" name="label_4">
       <property name="text">
-       <string>Shape</string>
-      </property>
-     </widget>
-    </item>    
-    <item row="3" column="1">
-     <layout class="QGridLayout" name="gridLayout_4">
-      <item row="1" column="0">
-       <widget class="QRadioButton" name="curve_radio">
-        <property name="text">
-         <string>Curve</string>
-        </property>
-        <attribute name="shapeGrp">
-          <string notr="true">shapeGrp</string>
-       </attribute>
-       </widget>
-      </item>
-     </layout>
-    </item> 
-    <item row="4" column="0">
-     <widget class="QLabel" name="warnings">
-      <property name="text">
-       <string>Sort</string>
+       <string>Sort (Optional)</string>
       </property>
      </widget>
     </item>  
-    <item row="4" column="1">
+    <item row="3" column="1">
      <layout class="QGridLayout" name="gridLayout_4">
-     <item row="1" column="0">
-     <widget class="QCheckBox" name="sort_checkbox">
-      <property name="text">
-       <string>Sort</string>
-      </property>
-     </widget>
-    </item>
-      <item row="5" column="0">
+      <item row="0" column="0">
        <widget class="QRadioButton" name="x_radio">
         <property name="text">
          <string>by X</string>
         </property>
-        <attribute name="sortGrp">
-          <string notr="true">sortGrp</string>
+        <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
        </attribute>
        </widget>
       </item>
-      <item row="7" column="0">
+      <item row="2" column="0">
        <widget class="QRadioButton" name="y_radio">
         <property name="text">
          <string>by Y</string>
         </property>
-        <attribute name="sortGrp">
-          <string notr="true">sortGrp</string>
+        <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
        </attribute>
        </widget>
       </item>
-      <item row="9" column="0">
+      <item row="3" column="0">
        <widget class="QRadioButton" name="z_radio">
         <property name="text">
          <string>by Z</string>
         </property>
-        <attribute name="sortGrp">
-          <string notr="true">sortGrp</string>
+        <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
        </attribute>
        </widget>
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
-     <spacer name="verticalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>10</width>
-        <height>10</height>
-       </size>
-      </property>
-     </spacer>
-    </item> 
     <item row="1" column="1">
      <widget class="QPushButton" name="connecting_button">
       <property name="text">
@@ -168,8 +124,35 @@
       </property>
      </widget>
     </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Convert to plane?</string>
+      </property>
+     </widget>
+    </item>  
+    <item row="5" column="1">
+     <layout class="QGridLayout" name="gridLayout_4">
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="plane_check">
+        <property name="text">
+         <string></string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+     <item row="7" column="0">
+     <widget class="QLabel" name="warnings">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
    </layout>
+   
   </widget>
+  
   <widget class="QPushButton" name="apply_button">
    <property name="geometry">
     <rect>
